sua my-order my-info

--- a/frontend/src/app/bs-navbar/bs-navbar.component.html
+++ b/frontend/src/app/bs-navbar/bs-navbar.component.html
@@ -7,10 +7,11 @@
 
 
     </div>
-    <!--
+
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="fas fa-bars"></span>
-  </button>-->
+  </button>
+
     <div class="col">
 
       <div class="container cuc">
@@ -19,8 +20,13 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav" style="display: flex; flex-direction: row">
+
           <li class="nav-item">
             <a class="nav-link" routerLink="/login">Login</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/sign-up">Sign-UP</a>
           </li>
 
           <!-- hiển thị first name sau khi đăng nhập , khi ở anonymous user thì chỉ hiển thị login, sign-up -->
