xong responsive, navbar thì oke rồi nhưng ở giao diện điện thoại thì chưa đc nên cần sửa lại

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,7 @@
 <bs-navbar></bs-navbar>
-
+<!-- 
+    dùng ngIf cho thẻ bs-navbar để chỉ hiện thị cho User, ko hiện cho admin
+-->
 <body>
 <main role="main" class="container-fluid">
 
