--- a/frontend/src/app/my-order/my-order.component.html
+++ b/frontend/src/app/my-order/my-order.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="row no-gutters">
 
-        <div class="user-nav">
+        <div class="user-nav" id="user-nav">
             <ul class="list-group">
                 <li class="headline">
                     <div class="ava">
@@ -26,7 +26,7 @@
 
                     <thead>
                         <tr>
-                            <th style="width: 15%;">Order Number</th>
+                            <th style="width: 15%;">Number</th>
                             <th style="width: 40%;">Summary</th>
                             <th style="width: 15%;">Date</th>
                             <th style="width: 10%;">Total</th>
@@ -37,7 +37,7 @@
                     <tbody>
                         <tr>
                             <td> <a data-toggle="modal" data-target="#myModal">TI2004</a> </td>
-                            <td>FO-DR-JP-TI2004</td>
+                            <td> <p data-toggle="modal" data-target="#myModal">Bulbasaur x 1, Ivysaur X 2, ...</p> </td>
                             <td>FO, DR</td>
                             <td>$3.99</td>
                             <td>Canceled</td>
