--- a/frontend/src/app/bs-navbar/bs-navbar.component.html
+++ b/frontend/src/app/bs-navbar/bs-navbar.component.html
@@ -8,9 +8,9 @@
 
     </div>
 
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <!--<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="fas fa-bars"></span>
-  </button>
+  </button>-->
 
     <div class="col">
 
@@ -25,16 +25,14 @@
             <a class="nav-link" routerLink="/login">Login</a>
           </li>
 
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/sign-up">Sign-UP</a>
-          </li>
-
           <!-- hiển thị first name sau khi đăng nhập , khi ở anonymous user thì chỉ hiển thị login, sign-up -->
           <li class="dropdown">
             <a class="drod-togg" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <span class="firstname" *ngIf="anonymousUser"> Firstname </span> <i class="far fa-user"></i></a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
+              <a class="dropdown-item" routerLink="/sign-up">Sign-up</a>
               <a class="dropdown-item" routerLink="/my/orders">My Orders</a>
+              <a class="dropdown-item" routerLink="/my/info">My Info</a>
               <a class="dropdown-item" routerLink="/admin/orders">Manage Orders</a>
               <a class="dropdown-item" routerLink="/admin/products">Manage Products</a>
               <a class="dropdown-item logout" (click)="logout()">Log Out</a>
