--- a/frontend/src/app/my-info/my-info.component.css
+++ b/frontend/src/app/my-info/my-info.component.css
@@ -10,14 +10,41 @@
   padding: 0;
   padding-right: 0;
   }
-  
+
   .row {
       width: 100%;
   }
 
 .s {
     font-size: 13px;
+    flex: 1;
 }
+
+.hang {
+    display: flex;
+    flex-direction: row;
+}
+
+.cot-1 {
+    flex: 1;
+}
+
+
+.cot-2 {
+    flex: 1;
+    margin-left: 30px;
+}
+
+.col-dac-biet {
+    display: flex;
+    flex-direction: row;
+}
+
+.main {
+    background: blueviolet;
+}
+
+
 
 .user-nav{
     width: 250px;
@@ -131,15 +158,10 @@ input::placeholder {
       margin-top: 11px;
       font-family: 'Share Tech Mono', monospace;
 font-weight: 600;
-font-size: 15px;
+font-size: 14px;
 transition: 0.2s;
-    }
-
-    .cacban:hover {
-        letter-spacing: 1px;
         cursor: pointer;
     }
-
   .container {
     background: white;
     padding: 20px;
@@ -213,4 +235,31 @@ label {
  
  .alert-danger {
     color: #d93a3a;
+ }
+
+ @media only screen and (max-width:900px) {
+    .user-nav{
+        width: 150px;
+    }
+
+    .headline {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .ten {
+        margin-left: 0;
+    }
+
+}
+
+ @media only screen and (max-width:800px) {
+     #user-nav {
+         display: none;
+     }
+
+     .col-dac-biet {
+        flex-direction: column;
+    }
+
  }
