--- a/frontend/src/app/my-info/my-info.component.html
+++ b/frontend/src/app/my-info/my-info.component.html
@@ -1,4 +1,3 @@
-
 <div class="container-fluid">
     <div class="row no-gutters">
         <div class="user-nav" id="user-nav">
@@ -14,79 +13,84 @@
                     </div>
                 </li>
 
-                <li class="list-group-item" routerLink="/my/orders"> <span class="far fa-clone"></span>My Orders</li>
+                <li class="list-group-item" routerLink="/my/orders"> <span class="far fa-clone"></span>My Orders
+                </li>
                 <li class="list-group-item" routerLink="/my/info"> <span class="far fa-user"></span>My Info </li>
             </ul>
-            
-        </div>
-            <div class="col col-5 s">
-                    <h4 class="sa">MY INFO</h4> 
-            <form [formGroup]="form1">
-        
-                <div class="form-group">
-                    <label >Full Name</label>
-                    <input formControlName="name" type="name" class="form-control" value="Be Sa">
-                
-                </div>        
-                
-                <div class="form-group">
-                        <label >Email</label>
-                        <input formControlName="email" type="email" class="form-control" value="sachaocochudicon@gmail.com" readonly>
-            
-                </div> 
 
-                <div class="form-group">
-                        <label >Phone Number</label>
-                        <input formControlName="phone" type="tel" class="form-control" value="0919954179">
-            
-                </div> 
-            
-                <div class="form-group">
-                    <label >Address</label>
-                    <input formControlName="address" type="text" class="form-control" value="ở đâu á">
-            
-                </div> 
-       
-            </form>
-            <div class="cochu">
-                <button class="btn save">SAVE</button>
-                <span class="cacban"  data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">CHANGE PASSWORD ></span>
-            </div>
-            
         </div>
+        <div class="col col-dac-biet">
+            <div class="col s">
+                <h4 class="sa">MY INFO</h4>
+                <form [formGroup]="form1">
 
-        <div class="col col-4 s collapse" id="collapseExample">
-            <h4 class="sa">Change Password</h4>
-            <p class="sa" style="font-size: 20px; margin-bottom: 0px; margin-top: -25px;">___</p>
-            <form [formGroup]="form">
-        
                     <div class="form-group">
-                        <label >Current Password</label>
+                        <label>Full Name</label>
+                        <input formControlName="name" type="name" class="form-control" value="Be Sa">
+
+                    </div>
+
+                    <div class="form-group">
+                        <label>Email</label>
+                        <input formControlName="email" type="email" class="form-control"
+                            value="sachaocochudicon@gmail.com" readonly>
+
+                    </div>
+
+                    <div class="form-group">
+                        <label>Phone Number</label>
+                        <input formControlName="phone" type="tel" class="form-control" value="0919954179">
+
+                    </div>
+
+                    <div class="form-group">
+                        <label>Address</label>
+                        <input formControlName="address" type="text" class="form-control" value="ở đâu á">
+
+                    </div>
+
+                </form>
+                <div class="cochu">
+                    <button class="btn save">SAVE</button>
+                    <span class="cacban" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false"
+                        aria-controls="collapseExample">CHANGE PASSWORD ></span>
+                </div>
+
+            </div>
+
+            <div class="col s collapse" id="collapseExample">
+                <h4 class="sa">Change Password</h4>
+                <p class="sa" style="font-size: 20px; margin-bottom: 0px; margin-top: -25px;">___</p>
+                <form [formGroup]="form">
+
+                    <div class="form-group">
+                        <label>Current Password</label>
                         <input formControlName="curpass" type="password" class="form-control">
                         <div *ngIf="curpass.touched && curpass.invalid" class="alert alert-danger">
-                                <div *ngIf="curpass.errors.required"> Cannot be empty</div>
+                            <div *ngIf="curpass.errors.required"> Cannot be empty</div>
                         </div>
-                    </div>        
-                    
+                    </div>
+
                     <div class="form-group">
-                            <label >New Password</label>
-                            <input formControlName="newpass" type="password" class="form-control">
-                            <div *ngIf="newpass.touched && newpass.invalid" class="alert alert-danger">
-                                    <div *ngIf="newpass.errors.required"> Cannot be empty</div>
-                            </div>
-                    </div> 
-                
+                        <label>New Password</label>
+                        <input formControlName="newpass" type="password" class="form-control">
+                        <div *ngIf="newpass.touched && newpass.invalid" class="alert alert-danger">
+                            <div *ngIf="newpass.errors.required"> Cannot be empty</div>
+                        </div>
+                    </div>
+
                     <div class="form-group">
-                        <label >Confirm password</label>
+                        <label>Confirm password</label>
                         <input formControlName="conpass" type="password" class="form-control">
                         <div *ngIf="conpass.touched && conpass.invalid" class="alert alert-danger">
-                                <div *ngIf="conpass.errors.required"> Cannot be empty</div>
+                            <div *ngIf="conpass.errors.required"> Cannot be empty</div>
                         </div>
-                    </div> 
-            
-                </form>
-                    <button class="btn">CONFIRM</button>
-        </div>
-    </div>    
+                    </div>
 
+                </form>
+                <button class="btn">CONFIRM</button>
+            </div>
+
+        </div>
+    </div>
 </div>
