--- a/frontend/src/app/my-order/my-order.component.css
+++ b/frontend/src/app/my-order/my-order.component.css
@@ -116,9 +116,80 @@ th {
     display :flex;
     flex-direction : row;
     justify-content : center;
+    position: relative;
+}
+
+button {
+    position: absolute;
+    display: block;
+    background: none;
+    border: none;
+    outline: none;
+    width: 50px;
+    height: 50px;
+    color: #fff;
+    background: var(--do);
+    margin-top: 50px;
 }
 
     a {
         font-weight : 700;
         cursor: pointer;
+    }
+
+    p {
+        cursor: pointer;
+    }
+
+    
+ @media only screen and (max-width:900px) {
+    .user-nav{
+        width: 150px;
+    }
+
+    .headline {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .ten {
+        margin-left: 0;
+    }
+
+}
+
+    @media only screen and (max-width:800px) {
+        #user-nav {
+            display: none;
+        }
+
+        .table {
+            margin-top: 0;
+            padding-bottom: 200px;
+            border: none;
+        }
+
+        
+.sa {
+    padding-top: 25px;
+    text-align: center;
+    font-size: 30px;
+    font-weight: 600;
+    background-color: white;
+    color: var(--den);
+    position: relative;
+}
+
+.sa:after {
+    display: block;
+    content: " ";
+    width: 50px;
+    height: 4px;
+    margin-left: -25px;
+    left: 50%;
+    position: absolute;
+    background: var(--do);
+}
+
+
     }
