--- a/frontend/src/app/product-detail/product-detail.component.html
+++ b/frontend/src/app/product-detail/product-detail.component.html
@@ -32,7 +32,7 @@
                         <div style="margin-top: 50px; width: 100px;">
                             <product-quantity></product-quantity>
                         </div>
-                        <button class="btn"></button>
+                        <button class="btn"  routerLink="/shopping-cart"></button>
                     </div>
                 </div>
                 <h4 class=" headtype">Description</h4>
