--- a/frontend/src/app/my-info/my-info.component.html
+++ b/frontend/src/app/my-info/my-info.component.html
@@ -1,51 +1,48 @@
 
-<div class="container-fluid">
+<div class="container-fluid" (ngOnInit) = "ngOnInit()">
     <div class="row">
         <div class="col col-2" >
             <div class="headline">
                 <div class="ava" >
                 <i class=" far fa-user-circle fa-4x"></i>
              </div>  
-             <div class="ten">
+             <div class="ten" >
                    <p style="font-size: 13px; font-weight: 600;">ACCOUNT OF</p>
-                   <p id=name>Be Sa </p>
+                   <p id="name">{{user.name}}</p>
                 </div>  
             </div>
         <ul class="list-group">
-      
           
             <li class="list-group-item" routerLink="/my/orders">  <span class="fas fa-box"></span>My Orders</li>
            <li class="list-group-item" routerLink="/my/info"> <span class="fas fa-user-edit"></span>My Info </li>
         </ul></div>
             <div class="col col-5 s">
                     <h3 class="sa">MY INFO</h3> 
-            <form [formGroup]="form1">
         
                 <div class="form-group">
                     <label >Full Name</label>
-                    <input formControlName="name" type="name" class="form-control" value="Be Sa">
+                    <input  type="name" class="form-control" value={{user.name}}>
                 
                 </div>        
                 
                 <div class="form-group">
                         <label >Email</label>
-                        <input formControlName="email" type="email" class="form-control" value="sachaocochudicon@gmail.com" readonly>
+                        <input  type="email" class="form-control" value={{user.email}} readonly>
             
                 </div> 
 
                 <div class="form-group">
                         <label >Phone Number</label>
-                        <input formControlName="phone" type="tel" class="form-control" value="0919954179">
+                        <input  type="tel" class="form-control" value={{user.phone}}>
             
                 </div> 
             
                 <div class="form-group">
                     <label >Address</label>
-                    <input formControlName="address" type="text" class="form-control" value="ở đâu á">
+                    <input  type="text" class="form-control" value="ở đâu á">
             
                 </div> 
        
-            </form>
             <div class="cochu">
                 <button class="btn save">SAVE</button>
                 <span class="cacban"  data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">CHANGE PASSWORD ></span>
