--- a/frontend/src/app/bs-navbar/bs-navbar.component.html
+++ b/frontend/src/app/bs-navbar/bs-navbar.component.html
@@ -1,29 +1,27 @@
 <div class="navbar navbar-expand-lg">
+
   <div class="row">
 
+      <!--LOGO nè-->
     <div class="column">
+
       <a class="navbar-brand" routerLink="/">
         <logo routerLink="/"></logo>
       </a>
 
-
     </div>
 
-    <!--<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="fas fa-bars"></span>
-  </button>-->
-
+    <!-- SEARCH , USER , CART -->
     <div class="col">
 
-      <div class="container haha" id="small" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-        . </div>
+      <div class="container haha" id="small" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">. </div>
 
       <div class="container cuc" id="big">
         <input type="search" class="search" placeholder="Search">
       </div>
 
 
-  
+
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav" style="display: flex; flex-direction: row">
@@ -64,7 +62,7 @@
     </div>
   </div>
 
-  <div class="collapse" id="collapseExample" >
+  <div class="collapse" id="collapseExample">
     <input type="search" class="search" placeholder="Search">
   </div>
 
