--- a/frontend/src/app/change-password/change-password.component.html
+++ b/frontend/src/app/change-password/change-password.component.html
@@ -1,26 +1,29 @@
-<form [formGroup]="form">
+<form [formGroup]="ChangePasswordForm" (ngSubmit)="onSubmit()">
         
         <div class="form-group">
             <label >Current Password</label>
-            <input formControlName="curpass" type="password" class="form-control">
-            <div *ngIf="curpass.touched && curpass.invalid" class="alert alert-danger">
-                    <div *ngIf="curpass.errors.required"> Cannot be empty</div>
+            <input formControlName="curpass" type="password" class="form-control"
+            [ngClass]="{ 'is-invalid': submitted && f.curpass.errors }" >
+            <div *ngIf="submitted && f.curpass.errors" class="alert alert-danger">
+                    <div *ngIf="f.curpass.errors.required"> Cannot be empty</div>
             </div>
         </div>        
         
         <div class="form-group">
                 <label >New Password</label>
-                <input formControlName="newpass" type="password" class="form-control">
-                <div *ngIf="newpass.touched && newpass.invalid" class="alert alert-danger">
-                        <div *ngIf="newpass.errors.required"> Cannot be empty</div>
+                <input formControlName="newpass" type="password" class="form-control"
+                [ngClass]="{ 'is-invalid': submitted && f.newpass.errors }">
+                <div *ngIf="submitted && f.newpass.errors" class="alert alert-danger">
+                        <div *ngIf="f.newpass.errors.required"> Cannot be empty</div>
                 </div>
         </div> 
     
         <div class="form-group">
             <label >Confirm password</label>
-            <input formControlName="conpass" type="password" class="form-control">
-            <div *ngIf="conpass.touched && conpass.invalid" class="alert alert-danger">
-                    <div *ngIf="conpass.errors.required"> Cannot be empty</div>
+            <input formControlName="conpass" type="password" class="form-control"
+            [ngClass]="{ 'is-invalid': submitted && f.conpass.errors }">
+            <div *ngIf="submitted && f.conpass.errors" class="alert alert-danger">
+                    <div *ngIf="f.conpass.errors.required"> Cannot be empty</div>
             </div>
         </div> 
 
