--- a/frontend/src/app/logo/logo.component.css
+++ b/frontend/src/app/logo/logo.component.css
@@ -87,6 +87,7 @@ span {
 }
 
 .fa-circle{
+    margin-left: 13px;
     font-size: 10px;
     color: #d93a3a;
     position: absolute;
@@ -97,6 +98,7 @@ span {
     }
     
     .fa-pagelines{
+        margin-left: 13px;
         font-size: 24px;
     color: yellowgreen;
     transform: rotate(135deg);
@@ -120,6 +122,7 @@ left: 43px;
 }
 
 .long-text {
+    margin-left: 13px;
     position: absolute;
     font-size: 10px;
     font-weight: 600;
@@ -146,4 +149,8 @@ transform: rotate(55deg) translateX(-10px);
 
 .ball:hover ~ .excl {
     transform: rotate(35deg);
+}
+
+.logo {
+    margin-left: 13px;
 }
