--- a/frontend/src/app/logo/logo.component.html
+++ b/frontend/src/app/logo/logo.component.html
@@ -1,16 +1,18 @@
-<div class="ball">
-    <div class="top">
-        <div class="semi"></div>
+<div class="logo">
+    <div class="ball">
+        <div class="top">
+            <div class="semi"></div>
+        </div>
+
+        <div class="bot">
+            <div class="semi white"></div>
+        </div>
+
     </div>
 
-    <div class="bot">
-        <div class="semi white"></div>
-    </div>
-
+    <i class="fas fa-circle"></i>
+    <i class="fa fa-pagelines"></i>
+    <p class="long-text h">H</p>
+    <p class="long-text i">I</p>
+    <p class="long-text excl">!</p>
 </div>
-
-<i class="fas fa-circle"></i>
-<i class="fa fa-pagelines"></i>
-<p class="long-text h">H</p>
-<p class="long-text i">I</p>
-<p class="long-text excl">!</p>
