--- a/frontend/src/app/my-info/my-info.component.html
+++ b/frontend/src/app/my-info/my-info.component.html
@@ -52,13 +52,13 @@
                 </form>
                 <div class="cochu">
                     <button class="btn save">SAVE</button>
-                    <span class="cacban" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false"
-                        aria-controls="collapseExample">CHANGE PASSWORD ></span>
+                    <span class="cacban" data-toggle="collapse" data-target="#collapse-password" aria-expanded="false"
+                        aria-controls="collapse-password">CHANGE PASSWORD ></span>
                 </div>
 
             </div>
 
-            <div class="col s collapse" id="collapseExample">
+            <div class="col s collapse" id="collapse-password">
                 <h4 class="sa">Change Password</h4>
                 <p class="sa" style="font-size: 20px; margin-bottom: 0px; margin-top: -25px;">___</p>
                 <form [formGroup]="form">
