--- a/frontend/src/app/product-detail/product-detail.component.css
+++ b/frontend/src/app/product-detail/product-detail.component.css
@@ -1,86 +1,34 @@
 
-.headline {
-  padding-left: 50px;
-    font-size: 15px;
-    box-shadow: -1px 0 0 0 #242424;
-    color: #242424;
-    height: 35px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    position: relative;
-}
-
-.headline:after {
-  position: absolute;
-  height: 35px;
-  display: block;
-  width: 35px;
-  background: #7bc856;
-  content: " ";
-  left: 0;
-}
-
-.conbo {
-  width: 100%;
-  border: 1px solid #e0e0e0;
-  padding: 20px;
-}
-
-.carousel{
-  border: #242424;
-}
-
-.prod {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
 .col {
   padding-bottom: 200px;
 }
 
-.carousel-item {
-  transition: 0.5s;
+.prod {
+  display: grid;
+grid-template-columns: auto auto auto auto;
+justify-items: center;
 }
 
-.prev-icon {
-  width: 20px;
-  height: 20px;
-  border-top: 3px solid #242424;
-  border-left: 3px solid #242424;
-  transform: rotate(-45deg);
-}
-
-.next-icon {
-  width: 20px;
-  height: 20px;
-  border-top: 3px solid #242424;
-  border-left: 3px solid #242424;
-  transform: rotate(135deg);
-}
-
-.carousel-indicators li {
-  transition: 0.2s;
-  background: #242424;
-  border:  none;
-  opacity: 1;
-  height: 10px;
-  width: 10px;
-  border-radius: 10px;
-}
-
-.carousel-indicators .active {
-  width: 30px;
-  background: #d93a3a;
+.product-info{
+ padding-left: 50px; 
+ padding-top: 30px;
 }
 
 
-.r-in {
-  padding-left: 50px;
-  padding-bottom: 20px;
+.product-price {
+  font-weight: 600; 
+  color: #d93a3a;
 }
+
+.old-price {
+  text-decoration: line-through; 
+  font-size: 18px;
+  opacity: 0.5
+}
+
+.product-quantity{
+  margin-top: 50px; 
+  width: 100px}
 
 .image {
   margin-bottom: 20px;
@@ -152,26 +100,6 @@
   }
 
   
-  .prod {
-    display: grid;
-grid-template-columns: auto auto auto auto auto;
-    padding-left: 20px;
-    margin-top: -10px;
-    padding-bottom: 200px;
-  }
-  
-  .col {
-    padding-bottom: 200px;
-  }
-
-  .r-in {
-    padding-left: 50px;
-    padding-bottom: 20px;
-  }
-  
-  .image {
-    margin-bottom: 50px;
-  }
 
   .container-fluid {
     width: 100%;
@@ -181,8 +109,7 @@ grid-template-columns: auto auto auto auto auto;
   
 .cat-name {
 font-weight: bolder;
-padding-left: 30px;
-margin-top: -20px;
+padding-left: 13px;
 }
 
 .remaining-products {
@@ -191,4 +118,111 @@ font-weight: 500;
 color: #888888;
 text-transform: uppercase;
 }
+
+
+.view {
+  display: flex;
+  padding-left: 30px;
+  padding-right: 30px;
+  margin-bottom: 50px;
+}
+
+.headline {
+  margin-bottom: 20px;
+}
+
+.box-view {
+  border: 1px solid #e0e0e0;
+  padding: 20px;
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-bottom: 50px;
+}
+.product-view {
+  flex-direction: row;
+}
+
+.description {
+  flex-direction: column;
+}
+
+.related-products {
+  flex-direction: column;
+}
   
+.type2::before {
+  content: " / ";
+}
+.price-area {
+  display: flex;
+  flex-direction: column;
+}
+
+
+@media only screen and (max-width:1000px) {
+
+  .related-products{
+padding-left: 0;
+padding-right: 0;
+  }
+
+  .related-products .headline {
+    padding-left: 13px;
+  }
+
+  .prod{
+    grid-template-columns: auto auto;
+  }
+
+  .product-view {
+    flex-direction: column;
+  }
+
+  .view {
+    padding-right: 0;
+    padding-left: 0;
+  }
+
+  .product-info{
+    padding-left: 13px; 
+    padding-top: 0;
+   }
+
+   .product-number {
+     margin-bottom: -5px;
+   }
+
+   .product-price {
+    font-size: 35px;
+  }
+
+  .price-area{
+    flex-direction: row;
+  }
+  
+  .old-price {
+    text-decoration: line-through; 
+    font-size: 22px;
+    margin-left: 10px;
+    margin-top: 8px;
+    opacity: 0.5
+  }
+  
+  .product-quantity{
+    margin-top: 0; 
+}
+
+.description {
+  padding-right: 13px;
+  padding-left: 13px;
+}
+
+.box-view {
+  margin-right: 0;
+  margin-left: 0;
+  border-right: none;
+  border-left: none;
+  border-bottom: none;
+  margin-bottom: 0;
+}
+}
