--- a/frontend/src/app/product-detail/product-detail.component.html
+++ b/frontend/src/app/product-detail/product-detail.component.html
@@ -1,61 +1,57 @@
 <div class="container-fluid">
 
     <ul class="breadcrumb">
-        <button class="back">BACK</button>
+        <button class="back" onclick="history.go(-1)">BACK</button>
         <li><a href="#">Home</a></li>
-        <li><a href="#">Grass</a></li>
+        <li><a routerLink="/category" href="#">Grass</a></li>
         <li>Bulbasaur</li>
     </ul>
-    <h2 class="cat-name">GRASS <span class="remaining-products">(23 products)</span> </h2>
 
-    <div class="row no-gutters" style="margin-top: 20px;">
- <div class="col">
-            <div class="detail">
-                <div class="row no-gutters no r-in">
-                    <div class="col-5 image">
-                        <img src="https://cdn140.picsart.com/265075338006212.png?r1024x1024" alt="Product-image"
-                            style="width: 100%;">
+
+    <div class="row no-gutters">
+        <div class="col">
+
+
+                <h2 class="cat-name">GRASS <span class="remaining-products">(23 products)</span> </h2>
+
+                <div class="view product-view">
+
+                    <div class="image">
+                        <img src="https://cdn140.picsart.com/265075338006212.png?r1024x1024" alt="Product-image" style="width: 100%;">
                     </div>
-                    <div class="col-7" style="padding-left: 50px; padding-top: 30px;">
-                        <p>#001</p>
-                        <h2>Bulbasaur</h2>
-                        <h6>Grass <span>/ Poison</span> </h6>
-                        <h2 style="font-weight: 600; color: #d93a3a;">$5.00</h2>
-                        <p style="text-decoration: line-through; opacity: 0.5"> $9.00</p>
-                        <div style="margin-top: 50px; width: 100px;">
+
+                    <div class="product-info">
+                        <p class="product-number">#001</p>
+                        <h2 class="product-name">Bulbasaur</h2>
+                        <h6 class="type1">Grass 
+                            <span class="type2">Poison</span> 
+                        </h6>
+                        <div class="price-area">
+                        <h2 class="product-price">$5.00</h2>
+                        <p class="old-price" > $9.00</p>
+                    </div>
+                        <div class="product-quantity">
                             <product-quantity></product-quantity>
                         </div>
-                        <button class="btn"></button>
-                    </div>
-                </div>
-                <h4 class=" headtype">Description</h4>
-                <div class="row no-gutters r-in">
-                    <div class="conbo">
-
-
-                        <p>Height : </p>
-                        <p>Weight : </p>
-                        <p>Moves : </p>
-                        <p>Abilities : </p>
-                        <p>Japanese name : </p>
-                        <p>Weak to : </p>
+                        <button class="btn add-to-cart-btn"></button>
                     </div>
                 </div>
 
-                <h4 class=" headtype">Related Products</h4>
-                <div class="row no-gutters r-in">
-                    <div class="conbo">
+                <div class="box-view description">
+                    <h4 class="headline"> DESCRIPTION</h4>
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum enim tenetur, qui ut nesciunt culpa iure dignissimos facere dolorum possimus dolores voluptates optio, exercitationem magnam at eius corrupti vel pariatur. Cumque quidem ex suscipit assumenda libero ipsa iure et maiores tempore ullam fugiat autem nemo dolorum, rem officiis similique quibusdam, consequuntur fugit! Voluptate, voluptates. Illum molestiae fuga nesciunt nam soluta eligendi magni tenetur natus veritatis delectus, assumenda nemo quisquam deleniti blanditiis, quam est ad aliquid itaque voluptatem provident perferendis eveniet id quaerat maxime. Sint, incidunt architecto ipsa tenetur soluta fugit iusto doloremque vitae sapiente, a, quod sit eaque deserunt velit!</p>
+                </div>
 
-                        <div class="prod">
-                            <product-card></product-card>
-                            <product-card></product-card>
-                            <product-card></product-card>
-                            <product-card></product-card>
-                        </div>
+                <div class="box-view related-products">
+                    <h4 class="headline"> RELATED PRODUCTs</h4>
+                    <div class="prod">
+                        <product-card></product-card>
+                        <product-card></product-card>
+                        <product-card></product-card>
+                        <product-card></product-card>
                     </div>
                 </div>
-            </div>
+
         </div>
-
     </div>
 </div>
