--- a/frontend/src/app/shopping-cart/shopping-cart.component.html
+++ b/frontend/src/app/shopping-cart/shopping-cart.component.html
@@ -1,131 +1,60 @@
 <div class="container">
-  <div class="row shop-row" >
+  <div class="row shop-row">
     <div class="col shop-col">
-      <div class="shopping-cart-title sticky-top"> 
+      <div class="shopping-cart-title sticky-top">
         Shopping Cart
       </div>
     </div>
-    <div class="col cart-col" >
+    <div class="col cart-col">
       <div class="detail">
-    <!-- <button class="btn btn-sm">Clear all items</button>--> 
-  <p class="item-in-cart"> You have 1 item(s) in your cart</p>
-   <!--    <table class="table" style="margin-top: 20px;">
-        <thead >
-          <tr>
-            
-            <th style="width: 10%;"></th> 
-            <th style="width: 45%;">Product</th>
-            <th style="width: 20%;">Price</th>
-            <th style="width: 20%;">Quantity</th>
-            <th style="width: 5%"></th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>
-                <img class="thumbnail" src ="https://img.pokemondb.net/sprites/lets-go-pikachu-eevee/normal/venusaur.png" alt="hello">
-            </td>           
-            <td >Bulbasaur</td>
-             <td>$5.00</td>
-            <td>
-              <product-quantity></product-quantity>
-            </td>
-            <td>
-          <p style="font-size: 16px;" class="fas fa-times"></p></td>
-          </tr>
-        </tbody>
-      </table>     
-     -->
-     
-<!--show list item trong gio hang-->
-<ul>
-  <li>
-    <div class="container item" >
-     <div class="row">
-<img class="img-container" src="https://img.pokemondb.net/sprites/black-white/normal/venusaur.png" alt="">
-  
-      <div class="col" >
-        <div class="name-price">
-<p class="pro-name" routerLink="/product-detail"> Bulbasaur</p>
-<p class="pro-price">$5.00</p>
+
+        <p class="item-in-cart"> You have 1 item(s) in your cart</p>
+
+        <ul>
+          <li>
+            <div class="container item">
+
+              <div class="row">
+
+                <!--thumbnail sản phẩm-->
+                <img class="img-container" src="https://img.pokemondb.net/sprites/black-white/normal/venusaur.png"
+                  alt="">
+
+                <div class="col">
+                  
+                  <!-- tên và giá -->
+                  <div class="name-price">
+                    <p class="pro-name" routerLink="/product-detail"> Bulbasaur</p>
+                    <p class="pro-price">$5.00</p>
+                  </div>
+                  <!-- số lượng -->
+                  <div class="quantity" style="width: 100px;">
+                    <product-quantity></product-quantity>
+                  </div>
+
+                </div>
+
+                <div class="col del-sub">
+                  <button class="del-btn"></button>
+                  <p class="sub-total">$5.00</p>
+
+                </div>
+
+              </div>
+            </div>
+          </li>
+
+        </ul>
+
+      </div>
+      <div class="row boro">
+        <div class="col total">
+          Total <span class="total-price">$15.00</span>
+          <p style="font-size: 13px; font-weight: 500;">INCLUDING 10% VAT</p>
         </div>
-        <div class="quantity" style="width: 100px;">
-          <product-quantity></product-quantity>
-        </div>
-
       </div>
 
-      <div class="col del-sub">
-<button class="del-btn"></button>
-<p class="sub-total">$5.00</p>
-
-      </div>
-
-     </div>
-    </div>
-  </li>
-  <li>
-    <div class="container item" >
-     <div class="row">
-<img class="img-container" src="https://img.pokemondb.net/sprites/black-white/normal/venusaur.png" alt="">
-  
-      <div class="col" >
-        <div class="name-price">
-<p class="pro-name" routerLink="/product-detail"> Bulbasaur</p>
-<p class="pro-price">$5.00</p>
-        </div>
-        <div class="quantity" style="width: 100px;">
-          <product-quantity></product-quantity>
-        </div>
-
-      </div>
-
-      <div class="col del-sub">
-<button class="del-btn"></button>
-<p class="sub-total">$5.00</p>
-
-      </div>
-
-     </div>
-    </div>
-  </li>
-  <li>
-    <div class="container item" >
-     <div class="row">
-<img class="img-container" src="https://img.pokemondb.net/sprites/black-white/normal/venusaur.png" alt="">
-  
-      <div class="col" >
-        <div class="name-price">
-<p class="pro-name" routerLink="/product-detail"> Bulbasaur</p>
-<p class="pro-price">$5.00</p>
-        </div>
-        <div class="quantity" style="width: 100px;">
-          <product-quantity></product-quantity>
-        </div>
-
-      </div>
-
-      <div class="col del-sub">
-<button class="del-btn"></button>
-<p class="sub-total">$5.00</p>
-
-      </div>
-
-     </div>
-    </div>
-  </li>
-</ul>
-
-</div>
-     <div class="row boro">
-      <div class="col total" > 
-        Total <span class="total-price">$15.00</span>
-        <p style="font-size: 13px; font-weight: 500;">INCLUDING 10% VAT</p>
-       </div>
-      </div>
-
-      <button routerLink="/check-out" style="margin-top: 10px;" class="btn">Check Out</button>  
+      <button routerLink="/check-out" style="margin-top: 10px;" class="btn">Check Out</button>
     </div>
   </div>
-    
 </div>
